--- a/pom.xml
+++ b/pom.xml
@@ -200,20 +200,17 @@
 
     <profiles>
         <profile>
-            <id>midpoint</id>
+            <id>midpoint48</id>
             <dependencies>
                 <dependency>
                     <groupId>com.evolveum.midpoint.gui</groupId>
                     <artifactId>admin-gui</artifactId>
-                    <version>4.4.5</version>
-                    <type>jar</type>
-                    <classifier>classes</classifier>
+                    <version>4.8.2</version>
                     <scope>provided</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.testng</groupId>
                     <artifactId>testng</artifactId>
-                    <version>6.8</version>
                     <scope>test</scope>
                     <exclusions>
                         <exclusion>
@@ -224,43 +221,116 @@
                 </dependency>
                 <dependency>
                     <groupId>net.tirasa.connid</groupId>
-                    <artifactId>connector-framework-contract</artifactId>
-                    <version>${connId.version}</version>
+                    <artifactId>connector-framework</artifactId>
+                    <version>1.5.2.0</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>net.tirasa.connid</groupId>
+                    <artifactId>connector-framework-internal</artifactId>
+                    <version>1.5.2.0</version>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>midpoint44</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.evolveum.midpoint.gui</groupId>
+                    <artifactId>admin-gui</artifactId>
+                    <type>jar</type>
+                    <classifier>classes</classifier>
+                    <version>4.4.8</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.testng</groupId>
+                    <artifactId>testng</artifactId>
                     <scope>test</scope>
                     <exclusions>
                         <exclusion>
-                            <groupId>net.tirasa.connid</groupId>
-                            <artifactId>connector-test-common</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.codehaus.groovy</groupId>
-                            <artifactId>groovy</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.codehaus.groovy</groupId>
-                            <artifactId>groovy-templates</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.codehaus.groovy</groupId>
-                            <artifactId>groovy-bsf</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.codehaus.groovy</groupId>
-                            <artifactId>groovy-jsr223</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.codehaus.groovy</groupId>
-                            <artifactId>groovy-datetime</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.codehaus.groovy</groupId>
-                            <artifactId>groovy-dateutil</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>org.codehaus.groovy</groupId>
-                            <artifactId>groovy-sql</artifactId>
+                            <groupId>org.yaml</groupId>
+                            <artifactId>snakeyaml</artifactId>
                         </exclusion>
                     </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>net.tirasa.connid</groupId>
+                    <artifactId>connector-framework</artifactId>
+                    <version>1.5.1.10</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>net.tirasa.connid</groupId>
+                    <artifactId>connector-framework-internal</artifactId>
+                    <version>1.5.1.10</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>net.tirasa.connid</groupId>
+                    <artifactId>connector-framework-contract</artifactId>
+                    <version>1.5.1.10</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>midpoint40</id>
+            <repositories>
+                <repository>
+                    <id>evolveum-nexus-releases</id>
+                    <name>Internal Releases</name>
+                    <url>https://nexus.evolveum.com/nexus/content/repositories/releases/</url>
+                </repository>
+                <repository>
+                    <id>evolveum-nexus-snapshots</id>
+                    <name>Internal Releases</name>
+                    <url>https://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
+                </repository>
+                <repository>
+                    <!-- Jasper references old http repository which fails with 308. -->
+                    <id>jaspersoft-third-party</id>
+                    <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts</url>
+                </repository>
+            </repositories>
+            <dependencies>
+                <dependency>
+                    <groupId>com.evolveum.midpoint.gui</groupId>
+                    <artifactId>admin-gui</artifactId>
+                    <type>jar</type>
+                    <classifier>classes</classifier>
+                    <version>4.0.4</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.testng</groupId>
+                    <artifactId>testng</artifactId>
+                    <scope>test</scope>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.yaml</groupId>
+                            <artifactId>snakeyaml</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>net.tirasa.connid</groupId>
+                    <artifactId>connector-framework</artifactId>
+                    <version>1.5.0.10</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>net.tirasa.connid</groupId>
+                    <artifactId>connector-framework-internal</artifactId>
+                    <version>1.5.0.10</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>net.tirasa.connid</groupId>
+                    <artifactId>connector-framework-contract</artifactId>
+                    <version>1.5.0.10</version>
+                    <scope>test</scope>
                 </dependency>
             </dependencies>
         </profile>
